# metafora

./: .gitattributes  .gitignore  Cargo.toml  README.md  flake.nix
src/: cli.rs  crp.rs  fs.rs  log.rs  main.rs  net.rs
