[package]
name = "metafora"
version = "0.1.4"
edition = "2024"

[dependencies]
curl = { version = "0.4.49", features = [ "rustls" ] }
clap = { version = "4.5.48", features = [ "derive" ] }
rustls = "0.23.34"
thiserror = "2.0.17"
colored = "2"
base64 = "0.22.1"
aes-gcm = "0.10.3"
rand = "0.8"
hex = "0.4"
